Fix T64210: crash using Live Unwrap without UVMap

Reviewers: brecht

Maniphest Tasks: T64210

Differential Revision: https://developer.blender.org/D4817